# JET-MAIN

./: .dockerignore  .env.azure  .env.production  .gitignore  .jeticu-backend.swp  DOCKER_SETUP.md  Dockerfile  README-AZURE.md  README.Docker.md  deploy-azure.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  prompt3.py  start-django.sh  supervisord.conf
Operations/backend/: ARCHITECTURE.md  CONTACT_CREATION_GUIDE.md  Dockerfile  Dockerfile.dev  FBO.csv  MIGRATION_GUIDE.md  README.md  REFACTOR_PLAN.md  all_files_contents.md  check_template_content.py  check_templated_document.py  create_test_data.py  csv processor.py  db.sqlite3  db.sqlite3-journal  debug_itinerary_fields.py  debug_pdf_fields.py  entrypoint.dev.sh  entrypoint.sh  prompt2.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_document_endpoints.py  test_document_generation.py  test_gendec_generation.py  test_integrated_templated_system.py  test_model_changes.py  test_templated_document.py  verify_document_content.py
Operations/backend/aircraft/: admin.py  apps.py  models.py
Operations/backend/airports/: admin.py  apps.py  models.py
Operations/backend/api/: admin.py  contact_service.py  decorators.py  document_views.py  encryption.py  middleware.py  models.py  permissions.py  serializers.py  signals.py  timezone_utils.py  urls.py  utils.py  views.py  views.py.backup
Operations/backend/backend/: settings.py  urls.py
Operations/backend/common/: middleware.py  models.py  permissions.py  timezone_utils.py  utils.py
Operations/backend/contacts/: admin.py  apps.py  models.py
Operations/backend/documents/: .gitkeep  admin.py  models.py  (+4 more)
Operations/backend_new/: Project.md  pyproject.toml
(+398 files in other folders)
