[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "cryptography>=41.0.0,<42.0.0",
    "django>=5.1.0,<5.2.0",
    "django-cors-headers>=4.1.0,<4.2.0",
    "django-filter>=25.0",
    "djangorestframework>=3.14.0,<3.15.0",
    "djangorestframework-simplejwt>=5.2.2,<5.3.0",
    "drf-yasg>=1.21.5,<1.22.0",
    "gevent>=23.0.0,<24.0.0",
    "gunicorn>=21.2.0,<22.0.0",
    "lxml>=4.9.0",
    "pdfrw>=0.4",
    "pillow>=10.4.0",
    "psycopg2-binary==2.9.9",
    "pycryptodome>=3.19.0",
    "pypdf>=6.0.0",
    "pypdf2>=3.0.1",
    "python-dateutil>=2.8.2,<2.9.0",
    "python-dotenv>=1.0.0",
    "pytz>=2023.3",
    "reportlab>=4.4.3",
    "requests>=2.31.0",
    "twilio>=9.0.0",
]
