[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.6",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-yasg>=1.21.10",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
]
